@@ -109,6 +109,7 @@
       <compilerarg value="-J-Duser.country=${user.country}" />
       <compilerarg value="--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED" if:set="jdk9orlater" />
       <compilerarg value="--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED" if:set="jdk9orlater" />
+      <compilerarg value="--add-exports=java.desktop/sun.swing=ALL-UNNAMED" if:set="jdk9orlater" />
       <compilerarg value="-Xlint:unchecked" />
     </javac>
   </target>
@@ -126,6 +127,7 @@
       <jvmarg value="--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED" if:set="jdk9orlater" />
       <jvmarg value="--add-opens=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED" if:set="jdk9orlater" />
       <jvmarg value="--add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED" if:set="jdk9orlater" />
+      <jvmarg value="--add-opens=java.desktop/sun.swing=ALL-UNNAMED" if:set="jdk9orlater" />
     </java>
   </target>
 
@@ -145,7 +147,7 @@
         <attribute name="Implementation-Version" value="${version}" />
         <attribute name="Implementation-Vendor"  value="${vendor}" />
         <attribute name="Build-Id" value="${ts} (${user.name} [${os.name} ${os.version} ${os.arch}])" />
-        <attribute name="Add-Opens" value="java.desktop/com.sun.java.swing.plaf.windows" />
+        <attribute name="Add-Opens" value="java.desktop/com.sun.java.swing.plaf.windows java.desktop/sun.awt.shell java.desktop/sun.swing" />
       </manifest>
     </jar>
   </target>
@@ -319,6 +321,7 @@
       <compilerarg value="-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED" if:set="jdk9orlater" />
       <compilerarg value="--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED" if:set="jdk9orlater" />
       <compilerarg value="--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED" if:set="jdk9orlater" />
+      <compilerarg value="--add-exports=java.desktop/sun.swing=ALL-UNNAMED" if:set="jdk9orlater" />
     </javac>
   </target>
 
@@ -339,6 +342,7 @@
       <compilerarg compiler="org.eclipse.jdt.core.JDTCompilerAdapter" line="-warn:-serial,-warningToken" />
       <compilerarg value="--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED" if:set="jdk9orlater" />
       <compilerarg value="--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED" if:set="jdk9orlater" />
+      <compilerarg value="--add-exports=java.desktop/sun.swing=ALL-UNNAMED" if:set="jdk9orlater" />
     </javac>
   </target>
 
